--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "element-ui": "^2.15.13",
     "pinia": "^2.1.3",
     "vue": "^2.7.14",
